<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/g3"
    tools:context=".admin1"

    >
  <Button
      android:id="@+id/employee_details"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:contentDescription="@string/employee_login_button"
      android:padding="10dp"
      android:text="@string/employee_details"
      android:textColor="#EDE6E6"
      android:textSize="15sp"
      android:textStyle="bold" />
  <Button
      android:id="@+id/customer_details"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:contentDescription="customer login "
      android:padding="10dp"
      android:text="@string/customer_details"
      android:textColor="#EDE6E6"
      android:textSize="15sp"
      android:textStyle="bold" />
  </LinearLayout>